--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "scripts": {
+    "start": "gulp watch",
+    "build": "gulp build",
+    "format:fix": "pretty-quick --staged",
+    "precommit": "run-s format:fix"
+  },
   "devDependencies": {
+    "browser-sync": "^2.23.6",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-cssnano": "^2.1.2",
@@ -11,8 +18,18 @@
     "gulp-typescript": "^3.1.3",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.8",
+    "husky": "^0.14.3",
     "merge-stream": "^1.0.1",
+    "npm-run-all": "^4.1.2",
+    "prettier": "^1.11.1",
+    "pretty-quick": "^1.4.1",
     "run-sequence": "^1.2.2",
     "typescript": "^2.1.4"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0",
+    "bourbon": "^5.0.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1"
   }
 }
