--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es5",
+    "module": "esnext",
+    "target": "esnext",
     "noImplicitAny": false,
-    "removeComments": false
+    "removeComments": false,
+    "skipLibCheck": true
   }
 }
