--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
+    "gulp-debug": "^3.2.0",
     "gulp-expect-file": "0.0.7",
+    "gulp-file-include": "^2.0.1",
     "gulp-if": "^2.0.2",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.0.0",
+    "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-typescript": "^3.1.3",
     "gulp-uglify": "^2.0.0",
@@ -32,6 +36,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
+    "gulp-order": "^1.1.1",
     "jquery": "^3.3.1"
   }
 }
