--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "module": "esnext",
-    "target": "esnext",
+    "module": "es6",
+    "target": "es6",
     "noImplicitAny": false,
     "removeComments": false,
     "skipLibCheck": true
